--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html>
-​
-<head>
-    <meta charset="UTF-8">
-    <title>Jessica Maple</title>
-</head>
-<body>
-    <!-- Header -->
-    <h1>Welcome to my Sweet Website!!!<br/> Pull up a chair, stay a while</h1>
-    <!-- Link -->
-    <a href="https://www.google.com" >Go to google in a new tab</a>
-    <div>
-        <strong>this is some bold text</strong>
-    </div>
-    
-    <img src="https://www.fillmurray.com/300/300" alt="an image is supposed to be here">
-</body>
+    <head>
+     <title>Jessica Maple</title>
+     <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="header"> 
+                 <h1>Jessica Maple</h1>
+
+            </div>
+            <div id="content">
+                <div id="nav">
+                     <h3>Navigation</h3>
+                     <ul>
+                         <li>Home</li>
+                         <li>Portfolio</li>
+                         <li>Content</li>
+                     </ul>
+                </div>
+                <div id="main">
+                    <h2>Home Page</h2>
+                    <h2>Home Page</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, molestias? Harum placeat alias ex vitae veniam, ea culpa nobis provident esse totam fugit itaque commodi voluptas laudantium quis? Perferendis, accusantium!</p>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum necessitatibus ducimus rerum suscipit obcaecati fuga, nostrum cupiditate neque sed cumque quis atque sint quidem natus quam iure provident, reprehenderit numquam.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum molestiae perspiciatis ut eius error voluptatem quis vero sequi fugiat? Facilis incidunt labore sed harum minus accusamus qui ex totam voluptatibus.</p>
+
+                </div>
+            </div>
+            <div id="footer">
+                 Copyright &copy; 2019 Jessica Maple
+        
+            </div>
+        </div>
+    </body>
 </html>
