Added images to portfolio page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                           <li class="nav-item active">
                           <a class="nav-link" href="http://linkedin.com/jessmaple">Linkedin <span class="sr-only"></span></a>
                         </li>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="contact.html">Contact</a>
+                          <a class="dropdown-item" href="portfolio.html">Portfolio</a>
+                          <a class="dropdown-item" href="https://github.com/jessmaple">Github</a>
+                          <a class="dropdown-item" href="http://linkedin.com/jessmaple">Linkedin</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                        
           <li class="nav-item">
             <a class="nav-link" href="#"></a>
           </li>
