--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,22 @@
 
   <div class="portfoliocontainer">
 
-      <p>Portfolio</p>
+
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2015, so dope!">
+
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2016, so AWESOME!">
+
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2017, can't stop CREATING">
+
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2018, I am UNSTOPABLE">
+
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2019, goat STATUS">
+
+
+
+      <p>This is my portfolio. Check out some of the cool projects and tasks that I have taken on over the years!</p>
+
+
 
    </div>
 
