--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,8 @@
                           </div>
 
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="Message" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                          <label for="exampleInputMessage1">Message</label>
+                          <input type="Message" class="form-control" id="exampleInputMessgage1" placeholder="Type your message">
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                       </form>
