Added another image

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,8 @@
 
     <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2019, goat STATUS">
 
+    <img id="portfolioimg1" src="https://placehold.it/200x200" alt="A project from 2019, goat STATUS">
+
    </div>
 
   </div>
